# oddsfox-execution

./: .dockerignore  .gitignore  .gitleaks.toml  COMPLIANCE.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  artifacts.go  artifacts_test.go  deny.toml  docs_test.go  go.mod  knockout.go  knockout_test.go  main.go  replay.go  server.go  server_test.go  sports.go  sports_test.go  state.go  state_test.go  stream.go  stream_test.go
.github/workflows/: ci.yml  manual-full.yml
config/: container-paper.toml  oddsfox.toml.example  risk-policy.example.json
docs/: api.md  architecture.md  operator-runbook.md  product-spec.md  public-release-audit.md
examples/: order-intent.json
migrations/: 0001_initial.sql  0002_risk_quote_exposure.sql  0003_control_state_revision.sql
openapi/: oddsfox-execution-v1.json
scripts/: assert_live_local_image.sh  assert_paper_only_image.sh  cargo_audit.sh  check.sh  full_history_audit.sh  secret_scan.sh
src/: api.rs  auth.rs  config.rs  domain.rs  execution.rs  lib.rs  main.rs  risk.rs  store.rs
src/venue/: mod.rs  paper.rs  polymarket.rs
