[package]
name = "oddsfox-execution"
version = "0.2.0"
edition = "2024"
rust-version = "1.93"
license = "MIT"
description = "Risk-controlled prediction-market trade execution"
repository = "https://github.com/hypertrial/oddsfox-execution"

[[bin]]
name = "oddsfox-exec"
path = "src/main.rs"

[features]
default = ["paper"]
paper = []
live = ["dep:alloy"]
aws-kms = ["live", "dep:alloy-signer-aws", "dep:aws-config", "dep:aws-sdk-kms"]

[dependencies]
alloy = { version = "1.6.3", default-features = false, features = ["signer-local"], optional = true }
alloy-signer-aws = { version = "1.6.3", optional = true }
anyhow = "1.0"
async-trait = "0.1"
aws-config = { version = "1.8", default-features = false, features = ["behavior-version-latest", "default-https-client", "rt-tokio"], optional = true }
aws-sdk-kms = { version = "1.90", default-features = false, features = ["behavior-version-latest", "default-https-client", "rt-tokio"], optional = true }
axum = { version = "0.8", features = ["macros", "json"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
fs2 = "0.4"
futures = "0.3"
hex = "0.4"
metrics = "0.24"
metrics-exporter-prometheus = "0.18"
polymarket_client_sdk_v2 = { version = "=0.7.0", default-features = false, features = ["clob", "data", "ws", "tracing"] }
rand = "0.9"
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "rustls"] }
rust_decimal = { version = "1.41", features = ["serde-with-str"] }
secrecy = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_jcs = "0.1"
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "migrate", "macros", "derive", "chrono", "uuid", "json", "rust_decimal"] }
subtle = "2.6"
thiserror = "2.0"
tokio = { version = "1.50", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
toml = "0.9"
tower = { version = "0.5", features = ["limit", "timeout", "util"] }
tower-http = { version = "0.6", features = ["limit", "request-id", "trace", "util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2.5"
utoipa = { version = "5.4", features = ["axum_extras", "chrono", "uuid", "decimal"] }
uuid = { version = "1.23", features = ["serde", "v4", "v7"] }
zeroize = "1.8"

[dev-dependencies]
http-body-util = "0.1"
proptest = "1.9"
tempfile = "3.23"
tower = { version = "0.5", features = ["util"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
