[package]
name = "oddsfox-execution"
version = "0.3.0"
edition = "2024"
rust-version = "1.93"
license = "MIT"
description = "Risk-controlled prediction-market trade execution"
repository = "https://github.com/hypertrial/oddsfox-execution"

[[bin]]
name = "oddsfox-exec"
path = "src/main.rs"

[features]
default = []
live = ["dep:alloy"]

[dependencies]
alloy = { version = "1.6.3", default-features = false, features = ["signer-local"], optional = true }
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros", "json"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
fs2 = "0.4"
futures = "0.3"
hex = "0.4"
metrics = "0.24"
metrics-exporter-prometheus = "0.18"
polymarket_client_sdk_v2 = { version = "=0.7.0", default-features = false, features = ["clob", "data", "ws", "tracing"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "rustls"] }
rust_decimal = { version = "1.41", features = ["serde-with-str"] }
secrecy = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_jcs = "0.1"
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "migrate", "macros", "derive", "chrono", "uuid", "json", "rust_decimal"] }
subtle = "2.6"
thiserror = "2.0"
tokio = { version = "1.50", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
toml = "0.9"
tower = { version = "0.5", features = ["limit", "timeout", "util"] }
tower-http = { version = "0.6", features = ["limit", "request-id", "trace", "util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
utoipa = { version = "5.4", features = ["axum_extras", "chrono", "uuid", "decimal"] }
uuid = { version = "1.23", features = ["serde", "v4", "v7"] }

[dev-dependencies]
tempfile = "3.23"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
